--- a/src/components/Web/HomeCourses/HomeCourses.scss
+++ b/src/components/Web/HomeCourses/HomeCourses.scss
@@ -17,7 +17,7 @@
     .list-post-item {
       display: flex !important;
       flex-direction: column !important;
-      max-width: 300px !important;
+      width: 300px !important;
     }
   }
 
