--- a/src/layouts/AdminLayout/AdminLayout.scss
+++ b/src/layouts/AdminLayout/AdminLayout.scss
@@ -35,6 +35,17 @@ $widthLeftMenu:200px;
             position: relative !important;
             margin: 20px !important;
 
+            .ui.segment {
+                position: relative;
+                background: #fff;
+                box-shadow: 0 1px 2px 0 rgb(34 36 38 / 15%);
+                margin: 1rem 0;
+                padding: 1em 1em;
+                border-radius: 0.28571429rem;
+                border: 1px solid rgba(34,36,38,.15);
+                overflow-y: scroll;
+                height: calc(100vh - $body_padding)
+            }
         }
     }
 }
