--- a/src/components/Web/Blog/ListPostItem/ListPostItem.scss
+++ b/src/components/Web/Blog/ListPostItem/ListPostItem.scss
@@ -16,6 +16,9 @@
     margin: 10px 0 0 0;
     font-weight: normal;
   }
+  >h3{
+    margin: 0 !important;
+  }
 
   span {
     color: $text-ligth;
