--- a/src/pages/web/Post/Post.scss
+++ b/src/pages/web/Post/Post.scss
@@ -1,47 +1,58 @@
 @import "~/src/scss/index.scss";
 
-.post{
-    margin-top: 50px;
-    text-align: center !important;
+.post {
+  margin-top: 50px;
+  text-align: center !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
+  border: 10px solid $background-ligth;
+  .image-post {
+    text-align: center;
     display: flex !important;
-    flex-direction: column !important;
     justify-content: center !important;
     align-items: center !important;
-    .image-post{
-        text-align: center;
-        display: flex !important;
-        justify-content: center !important;
-        align-items: center !important;
-        max-width: 400px;
-        border-radius: 200px !important;
+    max-width: 400px;
+    border-radius: 200px !important;
 
-
-        >.ui.fluid.image{
-            border-radius: 10px !important;
-            max-width: 300px !important;
-        }
-
+    > .ui.fluid.image {
+      border-radius: 10px !important;
+      width: 390px !important;
     }
+  }
 
-    .title{
+  .title {
+    color: $text-ligth;
+    text-align: center;
+    margin-bottom: 6;
+    border-bottom: 5px dashed $background-ligth;
+    width: 100%;
+    padding: 20px;
 
-        color: $text-ligth;
-        text-align: center;
-        margin-bottom: 6;
-        border-bottom: 1px solid $border-grey;
-        width: 100%;
+    .title2{
+      color: $primary;
+      text-align: center;
+      margin-bottom: 6;
+      width: 100%;
     }
+  }
 
-    .content{
-        color: $text-ligth;
-        text-align: center;
-        border-top: 1px solid $border-grey;
-        margin-top: 10px;
-        width: 100%;
-        pre{
-            background-color:#0000 ;
-            overflow-x: scroll;
-            padding: 20px;
-        }
+  .content {
+    color: $text-ligth;
+    margin-top: 10px;
+    padding: 20px;
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    text-align: start;
+    pre {
+      background-color: #0000;
+      overflow-x: scroll;
+      padding: 20px;
     }
+  }
 }
